TS-4009: crash in stale_while_revalidate