plugins/experimental/stale_while_revalidate/stale_while_revalidate.c
@@ -366,6 +366,7 @@ fetch_resource(TSCont cont, TSEvent event ATS_UNUSED, void *edata ATS_UNUSED)
   TSCont consume_cont;
   // struct sockaddr_in client_addr;
   TSMLoc connection_hdr_loc, connection_hdr_dup_loc;
+  TSMutex mutex = NULL;
 
   state = (StateInfo *)TSContDataGet(cont);
 
@@ -391,7 +392,8 @@ fetch_resource(TSCont cont, TSEvent event ATS_UNUSED, void *edata ATS_UNUSED)
 
   if (state) {
     TSDebug(PLUGIN_NAME, "Lets do the lookup");
-    consume_cont = TSContCreate(consume_resource, NULL);
+    mutex = TSMutexCreate();
+    consume_cont = TSContCreate(consume_resource, mutex);
     TSContDataSet(consume_cont, (void *)state);
 
     if (state->async_req) {
@@ -468,6 +470,7 @@ main_plugin(TSCont cont, TSEvent event, void *edata)
   TSMLoc loc, warn_loc;
   TSHttpStatus http_status;
   config_t *plugin_config;
+  TSMutex mutex;
 
   switch (event) {
   // Is this the proper event?
@@ -527,7 +530,8 @@ main_plugin(TSCont cont, TSEvent event, void *edata)
           state->async_req = true;
           TSHttpTxnCacheLookupStatusSet(txn, TS_CACHE_LOOKUP_HIT_FRESH);
           // TSHttpTxnReenable(txn, TS_EVENT_HTTP_CONTINUE);
-          fetch_cont = TSContCreate(fetch_resource, NULL);
+          mutex = TSMutexCreate();
+          fetch_cont = TSContCreate(fetch_resource, mutex);
           TSContDataSet(fetch_cont, (void *)state);
           TSContSchedule(fetch_cont, 0, TS_THREAD_POOL_TASK);
           TSHttpTxnReenable(txn, TS_EVENT_HTTP_CONTINUE);
@@ -540,7 +544,8 @@ main_plugin(TSCont cont, TSEvent event, void *edata)
           state->async_req = false;
           state->txn = txn;
           state->main_cont = cont; // we need this for the warning header callback. not sure i like it, but it works.
-          fetch_cont = TSContCreate(fetch_resource, NULL);
+          mutex = TSMutexCreate();
+          fetch_cont = TSContCreate(fetch_resource, mutex);
           TSContDataSet(fetch_cont, (void *)state);
           TSContSchedule(fetch_cont, 0, TS_THREAD_POOL_NET);
         } else {
